# kodegen-bundler-autoconfig

./: Cargo.toml  README.md
src/: config.rs  install.rs  lib.rs  watcher.rs
src/clients/: claude_desktop.rs  cursor.rs  mod.rs  roo_code.rs  windsurf.rs  zed.rs
